Update to version 0.8.11