@@ -1,7 +1,9 @@
 #!/bin/sh
 
 exec java \
-    -Xmx256M \
+    -Xms256M \
+    -XX:+HeapDumpOnOutOfMemoryError \
+    -XX:+ExitOnOutOfMemoryError \
     -DdisableUpdates='true' \
     --add-opens java.base/java.lang='ALL-UNNAMED' \
     --add-opens java.base/java.nio='ALL-UNNAMED' \
@@ -10,6 +12,7 @@ exec java \
     --add-opens java.desktop/java.awt='ALL-UNNAMED' \
     --add-opens java.desktop/javax.swing='ALL-UNNAMED' \
     --add-opens java.desktop/javax.swing.plaf.basic='ALL-UNNAMED' \
+    --add-opens java.desktop/javax.swing.text.html='ALL-UNNAMED' \
     --add-opens java.desktop/sun.swing='ALL-UNNAMED' \
     -jar /usr/share/java/muwire.jar \
     "$@"
